# projec-cdx

./: .gitattributes  .gitignore  .graphifyignore  AGENTS.md  AGENTS.reference.md  CEO_CONTROL_PLANE.code-workspace  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MAPA.md  MAPA_CAPAS.md  MAPA_CORTO.md  MAPA_MAESTRO.md  PATH_CANONICAL.json  README.md  README_ARRANQUE_CODEX_CLOUD.md  README_CORTO.md  README_SUITE.md  SDU_STATE_G10.md  SDU_SYSTEM_CONTRACT.md  SECURITY.md  SYSTEM_NERVOUS_INDEX.json  VERSION_POLICY.md  VERSION_STATE.json  baseline.extensions.json  index.json  live-manifest.json  main.py  policy-adjustment-proposal.json  pyproject.toml  schema.json
.agileagentcanvas-context/: README.md  epics.json  vision.json
.codex/: config.toml
.github/: copilot-instructions.md
.sdu/: intelligent-operation-layer.json  operational-chain-canon.json  operational-mode.json  risk-policy.json
08_READBACKS/: 20260625_000033_SDU_SHAREPOINT_LINK_WATCHDOG_L6_READBACK.md  20260625_001436_SDU_SHAREPOINT_LINK_WATCHDOG_L6_AUTH_RUN_READBACK.md  20260625_004013_SDU_G5_SHAREPOINTSITE_CREATE.md  20260625_004552_SDU_G5_2_DOCUMENTLOCATION_CREATE.md  20260625_005426_SDU_G5_2B_DOCUMENTLOCATION_RELATIVEURL_ONLY.md  20260625_005722_SDU_G5_2B_DOCUMENTLOCATION_RELATIVEURL_ONLY.md  20260625_010242_SDU_G5_2C_DOCUMENTLOCATION_POSTVERIFY_DIAGNOSTIC.md  20260625_011725_SDU_G5_2D_WATCHDOG_PATCH.md  20260625_013651_SDU_G6_2_DOMAIN_ENTITY_VALIDATION.md  20260625_014520_SDU_G6_3_AUTOMATED_DOCUMENTLOCATION_FLOW.md  20260625_021120_SDU_G6_4_CONTROLLED_LOOP_EXECUTION.md  20260625_163800_SDU_G6_5_OPERATIONALIZATION.md  20260625_170732_SDU_G6_CERTIFICATION.md  20260625_173245_SDU_G7_EXPEDIENTE_CREATE.md  20260625_174110_SDU_G8_1_DUAL_MODE.md  20260625_175240_SDU_G8_2_RUNTIME_SWITCH.md  20260625_180650_SDU_G8_3_ADX_CREATE_DISABLED.md  20260625_182016_SDU_G8_4_HISTORICAL_MIGRATION.md  20260625_182615_SDU_G8_5_FINAL_NORMALIZATION.md  20260625_202938_SDU_RUNTIME_FRICTION_HARDENING.md  20260626_SDU_MAX_LEVEL_PROMOTION.md  SDU_AGENT_CANVAS.md  SDU_BOOT_UNIFICATION.md  SDU_ENVIRONMENT_CANONICALIZATION.md  SDU_FULL_PACKAGE_READY.md  SDU_GOVERNANCE_REFINEMENT.md  SDU_NOC_ALERT_PATCH.md  SDU_NOC_INTELLIGENCE.md  SDU_NOC_REFINEMENT.md  SDU_NOC_SCREEN_MODE.md  SDU_NOC_WEB.md  SDU_REPO_BASELINE_LOCK_STATUS.txt
agents/: README.md
atomic/: CODEX_ATOMIC_ACTION_MATRIX.csv  CODEX_ATOMIC_OPERATING_CONTRACT.md  CODEX_ATOMIC_READBACK.md  CODEX_ATOMIC_VALIDATION_REPORT.md  CODEX_IDEMPOTENCY_POLICY.md  CODEX_PARTIAL_STATE_POLICY.md  CODEX_TRANSACTION_LEDGER_SCHEMA.json  MAPA.md  README.md
chains/: CADENA_VIVA_AGENTES_PERSISTENTE_20260620.md  README.md
contracts/: action-authorization.schema.json  action-execution.schema.json  action-registry.json  action-result.schema.json  action.schema.json  agent-map.json  alert.schema.json  anomaly.schema.json  contract-map.json  dashboard-state.schema.json  environment-contract.json  environment-registry.json  event-bus-state.schema.json  event-policy-decision.schema.json  event-replay.schema.json  event-result.schema.json  event-trace.schema.json  event-worker.schema.json  event.schema.json  federation-map.json  live-action.schema.json  live-approval.schema.json  live-audit.schema.json  live-authorization-formal.schema.json  live-execution-real.schema.json  live-execution.schema.json  live-guardrail.schema.json  live-operation-state.schema.json  live-rollback.schema.json  recommendation.schema.json  trace-index.schema.json  trace-intelligence-state.schema.json  trace-query.schema.json
dataverse/: ACTA_CORTE_EJECUTORA_20260615.md  ANCLA_CIERRE_WAVE.md  ANCLA_REHIDRATACION.md  APERTURA_MESA_TRABAJO_CORTE_EJECUTORA_20260616.md  DATAVERSE_OPERATIONAL_CHAIN_SOURCE_MAP.csv  (+22 more)
(+2491 files in other folders)
