[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projec-cdx"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.137.2",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "jsonschema>=4.26.0",
  "openai-agents>=0.17.5",
  "pyyaml>=6.0.1",
  "tzdata>=2025.2; platform_system == 'Windows'",
  "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.0.0",
  "matplotlib>=3.10.0",
  "pytest",
  "pytest-cov>=7.0.0",
  "reportlab>=5.0.0",
  "ruff>=0.14.0",
]
agents-sdk = ["openai-agents>=0.17.5"]
openai-orchestration = ["openai>=2.43.0"]
reports = [
  "matplotlib>=3.10.0",
  "reportlab>=5.0.0",
]

[project.scripts]
projec-cdx-cloud = "projec_cdx_cloud.cli:main"
launch-desk = "launch_desk.cli:main"
cdx = "metadata.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
